# misfit_rust

./: Cargo.toml  README.md  rust-toolchain.toml
ctrlc-toy/: Cargo.toml
ctrlc-toy/src/: main.rs
minigrep/: README.md  dark-star.txt
minigrep/src/: lib.rs  main.rs
ordinality/: Cargo.toml
ordinality/src/: enums.rs  equality.rs
paths/src/: main.rs
poem-toy/: Cargo.toml  README.md  changes.toml
poem-toy/files/: module_five.html
poem-toy/habitat/: README.md
poem-toy/results/: last_build.env  pre_build.env
poem-toy/src/: main.rs
rust/ordinality/src/: if-let-some.rs
rust/poem-toy/files/: index.html  jabberwocky_lewis-carroll.txt  upload.html
rust/poem-toy/habitat/: plan.sh
rust/poem-toy/habitat/config/: application-settings.json
rust/poem-toy/habitat/hooks/: init  run
rust/poem-toy/templates/: module_five.html.tera
rust/serde-toy/: Cargo.toml
rust/serde-toy/json/: application-settings-rendered.json
rust/serde-toy/src/: main.rs
rust/size_of/: size_of
serde-toy/: README.md
serde-toy/src/: main.rs
serde-toy/toml/: application-settings-superamerica.toml  default.toml
shell/: check-git-status  check-git-user-email  overlay
signals/: Cargo.toml
signals/src/: main.rs
size_of/: Cargo.toml  size_of.rs
