[package]
name = "poem-toy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
poem = { version = "1.3.48", features = ["embed", "static-files", "multipart"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
rust-embed = "6.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
# toml = "0.5.9"
# serde-transcode = "1.1.1"
# serde_urlencoded = "0.7.1"
# form_urlencoded = "1.1.0"
tera = { version = "1.17.1", default-features = false }
lazy_static = "1.4.0"
